# neuron

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/: pull_request_template.md
.github/workflows/: ci.build.yml  ci.test.yml  ci.yml
scripts/: build.sh  format.sh  test.sh
src/: arithmetic.cpp  arithmetic.h  buffer.cpp  buffer.h  context.h  cortex.h  float.h  math.h  neuron.h  sample.cpp  sample.h
src/audio/: context.h  sample.h  waveform.h
src/generators/: oscillator.cpp  oscillator.h
src/modulators/: adsr.cpp  adsr.h
src/processors/: filter.h  saturator.cpp  saturator.h  wavefolder.cpp  wavefolder.h
src/processors/effects/: saturator.cpp  saturator.h  wavefolder.cpp  wavefolder.h
src/processors/filters/: filter.cpp  filter.h
src/utilities/: arithmetic.cpp  arithmetic.h  logger.cpp  logger.h  midi.h  timer.h
tests/: arithmetic_test.cpp
tests/audio/: waveform_test.cpp
tests/generators/: oscillator_test.cpp
tests/modulators/: adsr_test.cpp
tests/processors/: saturator_test.cpp
tests/processors/effects/: saturator_test.cpp  wavefolder_test.cpp
tests/processors/filters/: filter_test.cpp
tests/utilities/: arithmetic_test.cpp  midi_test.cpp
